# MultiAgents

./: .gitignore  ARCHITECTURE_FLOW.md  CREWAI_IMPLEMENTATION_PLAN.md  CREWAI_ITERATIVE_FLOW_DIAGRAM.txt  IMPROVEMENTS.md  LICENSE  README.md  STREAMLIT_GUIDE.md  SYSTEM_DIAGRAM.txt  agents.py  arxivGET.py  arxivGET_all_categories.py  claude.md  crewai_proof_system.py  crewai_simple_demo.py  docker-compose.yml  example.py  ingest.py  main.py  proof_session_20251108_181850.json  proof_session_20251108_184537.json  proof_session_20251108_234835.json  pyproject.toml  requirements.txt  retriever.py  run_session.py  session_1762634794.json  session_1762638275.json  streamlit_app.py  streamlit_realtime_proof_integrated.py  test1.py  test2.py  todo.txt  visualize_graph.py
index/: meta.pkl  symbol_index.json
monitoring/: prometheus.yml
scripts/: init_postgres.sql  init_system.py  run_system.sh  test_system.py
src/: __init__.py
src/agents/: __init__.py  base.py  challenger.py  coordinator.py  historian.py  researcher.py  reviewer.py  synthesizer.py
src/api/: __init__.py  app.py  main.py  websocket_manager.py
src/api/routes/: __init__.py  agent_routes.py  ingestion_routes.py  knowledge_routes.py  reasoning_routes.py
src/communication/: __init__.py
src/communication/protocols/: a2a_protocol.py
src/config/: __init__.py  logging_config.py  settings.py
src/knowledge/graph/: __init__.py  neo4j_manager.py  queries.py  schema.py
src/knowledge/ingestion/: arxiv_fetcher.py  formula_extractor.py  pdf_parser.py  pipeline.py
src/knowledge/vector/: __init__.py  embeddings.py  qdrant_client.py  qdrant_manager.py
src/llm/: __init__.py  bedrock_client.py
src/reasoning/: __init__.py  geometric.py  numerical.py  symbolic.py
src/ui/: streamlit_app.py
