[tool.poetry]
name = "multiagents-conjecture-discovery"
version = "0.1.0"
description = "Multi-agent system for mathematical conjecture discovery using AWS Bedrock and graph networks"
authors = ["ANPCI"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# Core Framework
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
streamlit = "^1.31.0"
python-socketio = "^5.11.0"
websockets = "^12.0"

# AWS & LLM
boto3 = "^1.34.0"
anthropic-bedrock = "^0.7.0"
tiktoken = "^0.5.2"
langsmith = {version = "^0.0.87", optional = true}

# Document Processing
pymupdf = "^1.23.0"
pdfplumber = "^0.10.3"
marker-pdf = "^0.2.0"
arxiv = "^2.1.0"
pypdf = "^4.0.0"
# Note: DeepSeek-OCR will be installed separately as it requires specific setup

# Mathematical Processing
sympy = "^1.12"
scipy = "^1.12.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
networkx = "^3.2.0"

# Knowledge Storage
neo4j = "^5.16.0"
qdrant-client = "^1.7.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.25"
alembic = "^1.13.0"
redis = "^5.0.1"

# ML & Embeddings
sentence-transformers = "^2.3.0"
torch = "^2.2.0"
transformers = "^4.37.0"
scikit-learn = "^1.3.0"

# Agent Communication (A2A-style)
pyzmq = "^25.1.2"
msgpack = "^1.0.7"
cryptography = "^42.0.0"

# Utilities
httpx = "^0.26.0"
tenacity = "^8.2.3"
loguru = "^0.7.2"
python-dotenv = "^1.0.0"
click = "^8.1.7"
rich = "^13.7.0"
tqdm = "^4.66.0"

# Async Support
aiofiles = "^23.2.1"
aiocache = "^0.12.2"
asyncpg = "^0.29.0"

# Visualization
plotly = "^5.18.0"
pyvis = "^0.3.2"
graphistry = {version = "^0.32.0", optional = true}

# Monitoring & Observability
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"

# Development Tools
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.1.14"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
ipython = "^8.20.0"
jupyter = "^1.0.0"
aiohttp = "^3.13.2"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.12.0"
faker = "^22.0.0"
factory-boy = "^3.3.0"
requests-mock = "^1.11.0"

[tool.poetry.extras]
monitoring = ["langsmith", "graphistry"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG"]
ignore = ["E203", "E266", "E501", "F403", "F401"]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"